.kube/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: group12
  namespace: group12
  labels:
    app: group12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group12
  template:
    metadata:
      labels:
        app: group12
    spec:
      containers:
      - name: group12
        image: ljmagalaes/dierentuingroup12
        ports:
        - name: web
          containerPort: 8080
        platforms:
          - architecture: amd64
            os: linux
          - architecture: arm64
            os: linux
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: regcred
      # - name: registry-credentials
