.kube/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  namespace: group12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group12-prometheus
  template:
    metadata:
      labels:
        app: group12-prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus-12
          args:
            - "--config.file=/etc/prometheus-12/prometheus.yml"
            - "--web.enable-lifecycle"
            - "--web.external-url=https://12.web.dops.tech/prometheus"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-server-conf
            defaultMode: 420
