.kube/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: group12
spec:
  selector:
    app: group12-prometheus
  ports:
    - name: web
      port: 8080
      targetPort: 9090
  # type: LoadBalancer
