.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: group12
  namespace: group12
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: group12
