.kube/deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: group12-context
  namespace: group12
  labels:
    app: group12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group12
  template:
    metadata:
      labels:
        app: group12
    spec:
      containers:
      - name: group12-context
        image: dec6e03f035326d5611572ace8f2d3725c9ba4ae6e36ef63dd0aa781da7fc791
        ports:
        - name: web
          containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: registry-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: group12-context
  namespace: group12
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: group12
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: group12
  namespace: group12
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`[group_number].web.dops.tech`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: group12-context
      port: 80
  tls:
    certResolver: myresolver
