.kube/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: group12route
  namespace: group12
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`12.web.dops.tech`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: group12
      port: 8080
  tls:
    certResolver: myresolver
