.kube/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: group12route-prometheus
  namespace: group12
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`12.web.dops.tech`) && PathPrefix(`/prometheus`)
    kind: Rule
    services:
    - name: prometheus-service
      port: 8080
  tls:
    certResolver: myresolver
